packages/svelte/tests/validator/samples/runes-state-rune-not-mutated/input.svelte
<script>
	function createCounter() {
		let count = $state(0);
		return {
			get count() {
				return count
			}
		};
  }
</script>
