packages/svelte/tests/compiler-errors/samples/runes-wrong-effect-placement/main.svelte
<script>
	function a() {
		return $effect(() => {});
	}
</script>
